--- a/static/css/page/search.scss
+++ b/static/css/page/search.scss
@@ -76,6 +76,7 @@ li.result > a {
 #main_search_results {
     max-width: 40rem;
     margin: 4em auto;
+    padding: 0 1em;
 }
 
 .close-button {
